Fixing minimizer z-index and background transparency.

--- a/public/stylesheets/visualcensus.css
+++ b/public/stylesheets/visualcensus.css
@@ -47,6 +47,7 @@
     right: 20px;
     width: 20px;
     height: 20px;
+    z-index: 10;
 }
 
 .name {
